--- a/blog.html
+++ b/blog.html
@@ -147,7 +147,7 @@
           </div>
           <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">
+              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.png');">
 								<div class="meta-date text-center p-2">
                   <span class="day">26</span>
                   <span class="mos">June</span>
@@ -170,7 +170,7 @@
 
           <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_4.jpg');">
+              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/mobileApp.jpg');">
 								<div class="meta-date text-center p-2">
                   <span class="day">26</span>
                   <span class="mos">June</span>
@@ -192,7 +192,7 @@
           </div>
           <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_5.jpg');">
+              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/uiux.jpg');">
 								<div class="meta-date text-center p-2">
                   <span class="day">26</span>
                   <span class="mos">June</span>
@@ -214,7 +214,7 @@
           </div>
           <div class="col-md-6 col-lg-4 ftco-animate">
             <div class="blog-entry">
-              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_6.jpg');">
+              <a href="blog-single.html" class="block-20 d-flex align-items-end" style="background-image: url('images/python.jpg');">
 								<div class="meta-date text-center p-2">
                   <span class="day">26</span>
                   <span class="mos">June</span>
