--- a/courses.html
+++ b/courses.html
@@ -79,7 +79,7 @@
 	  				<!-- <li class="nav-item"><a href="teacher.html" class="nav-link">Staff</a></li> -->
 	  				<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	  				<li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>
-	  				<li class="nav-item"><a href="contact.php" class="nav-link">Contact</a></li>
+	  				<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	  				<li class="nav-item"><a href="FAQ.php" class="nav-link">FAQ</a></li>
 	  				<!-- <li class="nav-item"><a href="FAQ.php" class="nav-link">FAQ</a></li> -->
 
@@ -105,7 +105,20 @@
 			<div class="container-fluid px-4">
 				<div class="row">
 					<div class="col-md-3 course ftco-animate">
-						<div class="img" style="background-image: url(images/course-1.jpg);"></div>
+						<div class="img" style="background-image: url(images/bg_5.jpg);"></div>
+						<div class="text pt-4">
+							<p class="meta d-flex">
+								<span><i class="icon-user mr-2"></i>Mr. Victor</span>
+								<span><i class="icon-table mr-2"></i>10 seats</span>
+								<span><i class="icon-calendar mr-2"></i>4 Years</span>
+							</p>
+							<h3><a href="#">Electric Engineering</a></h3>
+							<p>Separated they live in. A small river name flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
+							<p><a href="#" class="btn btn-primary">Apply now</a></p>
+						</div>
+					</div>
+					<div class="col-md-3 course ftco-animate">
+						<div class="img" style="background-image: url(images/bg_3.jpg);"></div>
 						<div class="text pt-4">
 							<p class="meta d-flex">
 								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
@@ -118,10 +131,10 @@
 						</div>
 					</div>
 					<div class="col-md-3 course ftco-animate">
-						<div class="img" style="background-image: url(images/course-2.jpg);"></div>
+						<div class="img" style="background-image: url(images/fullstack.jpg);"></div>
 						<div class="text pt-4">
 							<p class="meta d-flex">
-								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
+								<span><i class="icon-user mr-2"></i>Mr. Victoe</span>
 								<span><i class="icon-table mr-2"></i>10 seats</span>
 								<span><i class="icon-calendar mr-2"></i>4 Years</span>
 							</p>
@@ -131,23 +144,10 @@
 						</div>
 					</div>
 					<div class="col-md-3 course ftco-animate">
-						<div class="img" style="background-image: url(images/course-3.jpg);"></div>
+						<div class="img" style="background-image: url(images/bg_3.jpg);"></div>
 						<div class="text pt-4">
 							<p class="meta d-flex">
-								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
-								<span><i class="icon-table mr-2"></i>10 seats</span>
-								<span><i class="icon-calendar mr-2"></i>4 Years</span>
-							</p>
-							<h3><a href="#">Electric Engineering</a></h3>
-							<p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
-							<p><a href="#" class="btn btn-primary">Apply now</a></p>
-						</div>
-					</div>
-					<div class="col-md-3 course ftco-animate">
-						<div class="img" style="background-image: url(images/course-4.jpg);"></div>
-						<div class="text pt-4">
-							<p class="meta d-flex">
-								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
+								<span><i class="icon-user mr-2"></i>Mr. Victor</span>
 								<span><i class="icon-table mr-2"></i>10 seats</span>
 								<span><i class="icon-calendar mr-2"></i>4 Years</span>
 							</p>
@@ -158,10 +158,10 @@
 					</div>
 
 					<div class="col-md-3 course ftco-animate">
-						<div class="img" style="background-image: url(images/course-5.jpg);"></div>
+						<div class="img" style="background-image: url(images/fullstack.jpg.jpg);"></div>
 						<div class="text pt-4">
 							<p class="meta d-flex">
-								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
+								<span><i class="icon-user mr-2"></i>Mr. Victor</span>
 								<span><i class="icon-table mr-2"></i>10 seats</span>
 								<span><i class="icon-calendar mr-2"></i>4 Years</span>
 							</p>
@@ -174,7 +174,7 @@
 						<div class="img" style="background-image: url(images/course-6.jpg);"></div>
 						<div class="text pt-4">
 							<p class="meta d-flex">
-								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
+								<span><i class="icon-user mr-2"></i>Mr. Victor</span>
 								<span><i class="icon-table mr-2"></i>10 seats</span>
 								<span><i class="icon-calendar mr-2"></i>4 Years</span>
 							</p>
@@ -187,7 +187,7 @@
 						<div class="img" style="background-image: url(images/course-7.jpg);"></div>
 						<div class="text pt-4">
 							<p class="meta d-flex">
-								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
+								<span><i class="icon-user mr-2"></i>Mr. Victor</span>
 								<span><i class="icon-table mr-2"></i>10 seats</span>
 								<span><i class="icon-calendar mr-2"></i>4 Years</span>
 							</p>
@@ -200,7 +200,7 @@
 						<div class="img" style="background-image: url(images/course-8.jpg);"></div>
 						<div class="text pt-4">
 							<p class="meta d-flex">
-								<span><i class="icon-user mr-2"></i>Mr. Khan</span>
+								<span><i class="icon-user mr-2"></i>Mr. Victor</span>
 								<span><i class="icon-table mr-2"></i>10 seats</span>
 								<span><i class="icon-calendar mr-2"></i>4 Years</span>
 							</p>
