--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 	              <div class="icon d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
 	              <div class="text">
 	                <span>Email</span>
-	                <span>youremail@email.com</span>
+	                <span>ariadneclassroom@gmail.com</span>
 	              </div>
 	            </div>
 	            <div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
@@ -115,7 +115,7 @@
           <div class="col-md-3 d-flex">
           	<div class="bg-light align-self-stretch box p-4 text-center">
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:info@yoursite.com">ariadne@yourmail.com</a></p>
+	            <p><a href="mailto:info@yoursite.com">ariadneclassroom@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
