--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@
 	  						</div>
 	  						<div class="text">
 	  							<span>Email</span>
-	  							<span>youremail@email.com</span>
+	  							<span>ariadneclassroom@gmail.com</span>
 	  						</div>
 	  					</div>
 	  					<div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
