--- a/blog.html
+++ b/blog.html
@@ -75,7 +75,7 @@
 	          <!-- <li class="nav-item"><a href="teacher.html" class="nav-link">Staff</a></li> -->
             <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>            
-	          <li class="nav-item"><a href="contact.php" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 	          <li class="nav-item"><a href="FAQ.php" class="nav-link">FAQ</a></li>
 	          <!-- <li class="nav-item"><a href="FAQ.php" class="nav-link">FAQ</a></li> -->
 
